--- a/Qms_v3/templates/agent_dashboard.html
+++ b/Qms_v3/templates/agent_dashboard.html
@@ -7,13 +7,13 @@
             <div class="col-md-2">
               <div class="card-base">
                 <div class="card-icon">
-                  <span title="All Audits" id="widgetCardIcon" class="imagecard">
+                  <span class="imagecard widgetCardIcon">
                     <i class="fa fa-database"></i>
                   </span>
                   <div class="card-data widgetCardData">
                     <h2 class="box-title mt-5" style="color: #2A3F54;">All Audits</h2>
                     <h1>{{all_total}}</h1>
-                    <a href="/emp-report/all" title="Style Builder" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
+                    <a href="/emp-report/all" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
                       View
                     </a>
                   </div>
@@ -24,13 +24,13 @@
             <div class="col-md-2">
               <div class="card-base">
                 <div class="card-icon">
-                  <span title="All Audits" id="widgetCardIcon" class="imagecard">
+                  <span class="imagecard widgetCardIcon">
                     <i class="fa fa-calendar"></i>
                   </span>
                   <div class="card-data widgetCardData">
                     <h2 class="box-title mt-5" style="color: #2A3F54;">This Month's Audits</h2>
                     <h1>{{month_all_total}}</h1>
-                    <a href="/emp-report/month" title="Style Builder" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
+                    <a href="/emp-report/month" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
                       View
                     </a>
                   </div>
@@ -41,13 +41,13 @@
             <div class="col-md-2">
               <div class="card-base">
                 <div class="card-icon">
-                  <span title="Open Audits" id="widgetCardIcon" class="imagecard">
+                  <span class="imagecard widgetCardIcon">
                     <i class="fa fa-pencil"></i>
                   </span>
                   <div class="card-data widgetCardData">
                     <h2 class="box-title mt-5" style="color: #2A3F54;">Open Audits</h2>
                     <h1>{{open_total}}</h1>
-                    <a href="/emp-report/open" title="Style Builder" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
+                    <a href="/emp-report/open" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
                       View
                     </a>
                   </div>
@@ -58,13 +58,13 @@
             <div class="col-md-2">
               <div class="card-base">
                 <div class="card-icon">
-                  <span title="Dispute Audits" id="widgetCardIcon" class="imagecard">
+                  <span class="imagecard widgetCardIcon">
                     <i class="fa fa-times"></i>
                   </span>
                   <div class="card-data widgetCardData">
                     <h2 class="box-title mt-5" style="color: #2A3F54;">Dispute Audits</h2>
                     <h1>{{dispute_total}}</h1>
-                    <a href="/emp-report/dispute" title="Style Builder" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
+                    <a href="/emp-report/dispute" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
                       View
                     </a>
                   </div>
@@ -75,13 +75,13 @@
             <div class="col-md-2">
               <div class="card-base">
                 <div class="card-icon">
-                  <span title="All Audits" id="widgetCardIcon" class="imagecard">
+                  <span class="imagecard widgetCardIcon">
                     <i class="fa fa-exclamation-circle"></i>
                   </span>
                   <div class="card-data widgetCardData">
                     <h2 class="box-title mt-5" style="color: #2A3F54;">This Month's Fatal Audits</h2>
                     <h1>{{fatal_total}}</h1>
-                    <a href="/emp-report/fatal" title="Style Builder" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
+                    <a href="/emp-report/fatal" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
                       View
                     </a>
                   </div>
@@ -92,7 +92,7 @@
             <div class="col-md-2">
               <div class="card-base">
                 <div class="card-icon">
-                  <span title="Dispute Audits" id="widgetCardIcon" class="imagecard">
+                  <span class="imagecard widgetCardIcon">
                     <i class="fa fa-exclamation-triangle"></i>
                   </span>
                   <div class="card-data widgetCardData">
@@ -109,7 +109,7 @@
             <div class="col-md-2">
               <div class="card-base">
                 <div class="card-icon">
-                  <span title="Dispute Audits" id="widgetCardIcon" class="imagecard">
+                  <span class="imagecard widgetCardIcon">
                     <i class="fa fa-tasks"></i>
                   </span>
                   <div class="card-data widgetCardData">
@@ -128,7 +128,7 @@
             <div class="col-md-2">
               <div class="card-base">
                 <div class="card-icon">
-                  <span title="All Audits" id="widgetCardIcon" class="imagecard">
+                  <span class="imagecard widgetCardIcon">
                     <i class="fa fa-lightbulb-o"></i>
                   </span>
                   <div class="card-data widgetCardData">
