--- a/Qms_v3/templates/report/BlazingHog.html
+++ b/Qms_v3/templates/report/BlazingHog.html
@@ -206,7 +206,7 @@
                             Solution Score
                         </div>
                         <div class="col-md-4">
-                            <h5 id="o_score"></h5>
+                            <h4 id="o_score"></h4>
                         </div>
                     </div>
                 </div>
@@ -238,7 +238,7 @@
                             Efficiency Score
                         </div>
                         <div class="col-md-4">
-                            <h5 id="c_score">10</h5>
+                            <h4 id="c_score">10</h4>
                         </div>
                     </div>
                 </div>
@@ -262,7 +262,7 @@
                             Tool usage
                         </div>
                         <div class="col-md-4 form-group">
-                            <h5 id="t_2">10</h5>
+                            <h5 id="t_2">{{form.compliance_2}}</h5>
                         </div>
                     </div>
                     <div class="row mt-3 fatal">
@@ -270,7 +270,7 @@
                             Edited Customer profile/Check customer profile
                         </div>
                         <div class="col-md-4 form-group">
-                            <h5 id="t_3">{{form.compliance_2}}</h5>
+                            <h5 id="t_3">{{form.compliance_3}}</h5>
                         </div>
                     </div>
                     <div class="row mt-3">
@@ -278,7 +278,7 @@
                             Compliance Score
                         </div>
                         <div class="col-md-4">
-                            <h5 id="t_score">{{form.compliance_3}}</h5>
+                            <h4 id="t_score"></h4>
                         </div>
                     </div>
                 </div>
