--- a/Qms_v3/templates/agent/Abhindalco.html
+++ b/Qms_v3/templates/agent/Abhindalco.html
@@ -21,8 +21,7 @@
                         </div>
                     </div>
                 </div>
-
-                <div class="col-md-12 fields">
+                <div class="col-md-12 bb fields">
                     <div class="row">
                         <div class="col-md-4">
                             <div class="row">
@@ -47,10 +46,10 @@
                         <div class="col-md-4">
                             <div class="row">
                                 <div class="col-md-6">
-                                    <h4>Transaction Handled Date</h4>
+                                    <h4>Zone</h4>
                                 </div>
                                 <div class="col-md-6">
-                                    <p>{{form.transaction_handled_date}}</p>
+                                    <p>{{form.zone}}</p>
                                 </div>
                             </div>
                         </div>
@@ -67,20 +66,40 @@
                         <div class="col-md-4">
                             <div class="row">
                                 <div class="col-md-6">
-                                    <h4>Ticket Number</h4>
+                                    <h4>Customer Name</h4>
                                 </div>
                                 <div class="col-md-6">
-                                    <p>{{form.ticket_number}}</p>
+                                    <p>{{form.customer_name}}</p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="row">
                                 <div class="col-md-6">
-                                    <h4>Evaluator Name</h4>
+                                    <h4>Customer Contact</h4>
                                 </div>
                                 <div class="col-md-6">
-                                    <p>{{form.evaluator_name}}</p>
+                                    <p>{{form.customer_contact}}</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <h4>Call Date</h4>
+                                </div>
+                                <div class="col-md-6">
+                                    <p>{{form.call_date}}</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <h4>Call Duration</h4>
+                                </div>
+                                <div class="col-md-6">
+                                    <p>{{form.call_duration}}</p>
                                 </div>
                             </div>
                         </div>
@@ -150,47 +169,87 @@
                 <div class="col-md-12 mt-3">
                     <div class="row">
                         <div class="col-md-12">
-                            <h4>Customer Experience</h4>
+                            <h4>Opening and Closing</h4>
                         </div>
                     </div>
                     <div class="row mt-3">
                         <div class="col-md-8">
-                            NCE : FCI &amp; GCI: If the Messages are switched around. i,e Second message sent in the place of first message. If the task is not been cleared. If the user name is in alphanumeric then it should be used as "Hey there". If the canned response is sent twise. The CRO should make sure that #SCI 1 (FCI) is reflecting on task list. Make sure only one task due today is on the task list.
+                            Used Standard Opening Protocol
                         </div>
                         <div class="col-md-4 form-group">
-                            <h5 id="ce_1">{{form.ce_1}}</h5>
+                            <h5 id="oc_1">{{form.oc_1}}</h5>
+                        </div>
+                    </div>
+                    <div class="row mt-3 fatal">
+                        <div class="col-md-8">
+                            Introduction of Product / Branding - 4 USP of eternia - WiWA, Warranty, Duranium, Eternia care Mentioning Hindalco, Aditya birla group
+                        </div>
+                        <div class="col-md-4 form-group">
+                            <h5 id="oc_2">{{form.oc_2}}</h5>
                         </div>
                     </div>
                     <div class="row mt-3">
                         <div class="col-md-8">
-                            NCE : In YLCI ,second message is sent in the place of first message. Any unnecessary space in the FCI canned response will be a NCE.
+                            Call Closing as per the Protocol
                         </div>
                         <div class="col-md-4 form-group">
-                            <h5 id="ce_2">{{form.ce_2}}</h5>
-                        </div>
-                    </div>
-                    <div class="row mt-3">
-                        <div class="col-md-8">
-                            NCE : In YLCI If the user is missed to Receive respective response for the SGM {Thanks for sticking in with noom}.
-                        </div>
-                        <div class="col-md-4 form-group">
-                            <h5 id="ce_3">{{form.ce_3}}</h5>
-                        </div>
-                    </div>
-                    <div class="row mt-3">
-                        <div class="col-md-8">
-                            NCE : In YLCI if user receives the message twice. If user is missed to hit finish the task after sending the message.
-                        </div>
-                        <div class="col-md-4 form-group">
-                            <h5 id="ce_4">{{form.ce_4}}</h5>
+                            <h5 id="oc_3">{{form.oc_3}}</h5>
                         </div>
                     </div>
                     <div class="row mt-3">
                         <div class="col-md-8 score">
-                            Customer Experience Score
+                            Opening and Closing Score
                         </div>
                         <div class="col-md-4">
-                            <h4 id="ce_score">10</h4>
+                            <h4 id="oc_score">{{form.opening_score}}</h4>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-12 mt-3">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h4>Softskills</h4>
+                        </div>
+                    </div>
+                    <div class="row mt-3">
+                        <div class="col-md-8">
+                            Used Empathetic Statements whenever required
+                        </div>
+                        <div class="col-md-4 form-group">
+                            <h5 id="softskill_1">{{form.softskill_1}}</h5>
+                        </div>
+                    </div>
+                    <div class="row mt-3">
+                        <div class="col-md-8">
+                            Making the conversation 2 ways, giving chance to the customer to ask question
+                        </div>
+                        <div class="col-md-4 form-group">
+                            <h5 id="softskill_2">{{form.softskill_2}}</h5>
+                        </div>
+                    </div>
+                    <div class="row mt-3">
+                        <div class="col-md-8">
+                           Active Listening without Interruption
+                        </div>
+                        <div class="col-md-4 form-group">
+                            <h5 id="softskill_3">{{form.softskill_3}}</h5>
+                        </div>
+                    </div>
+                    <div class="row mt-3">
+                        <div class="col-md-8">
+                           Clear Grammar & Communication
+                        </div>
+                        <div class="col-md-4 form-group">
+                            <h5 id="softskill_4">{{form.softskill_4}}</h5>
+                        </div>
+                    </div>
+                    <div class="row mt-3">
+                        <div class="col-md-8 score">
+                            Softskills Score
+                        </div>
+                        <div class="col-md-4">
+                            <h4 id="softskill_score">5</h4>
                         </div>
                     </div>
                 </div>
@@ -199,67 +258,50 @@
                 <div class="col-md-12 mt-3">
                     <div class="row">
                         <div class="col-md-12">
-                            <h4>Compliance</h4>
+                            <h4>Business &amp; Compliance</h4>
                         </div>
                     </div>
                     <div class="row mt-3">
                         <div class="col-md-8">
-                            CE : FCI/GCI : If the user receive irrespective message instead of respective message I.e., sending GCI message instead of FCI message. Only first name of the user should be sent with canned message. If there is any personal reply from the user that Particular users should be Skipped.
+                            Followed Policy & Procedure (Script)
                         </div>
                         <div class="col-md-4 form-group">
-                            <h5 id="c_1">{{form.compliance_1}}</h5>
+                            <h5 id="b_1">{{form.compliance_1}}</h5>
                         </div>
                     </div>
-                    <div class="row mt-3">
+                    <div class="row mt-3 fatal">
                         <div class="col-md-8">
-                            CE : If the user’s message was sent After or equal to 14 days irrespective of any task, those users should to be skipped to UU auto generate. Else if any irrelevant response is sent for a user.
+                            Accurate Documentation with full details in ZOHO
                         </div>
                         <div class="col-md-4 form-group">
-                            <h5 id="c_2">{{form.compliance_2}}</h5>
+                            <h5 id="b_2">{{form.compliance_2}}</h5>
                         </div>
                     </div>
-                    <div class="row mt-3">
+                    <div class="row mt-3 fatal">
                         <div class="col-md-8">
-                            CE : If the user’s last message be like UU response those users should be mark as inactive or skip. If the last messages looks like an acknowledgement for a UU response, those users should be skipped or Mark as inactive.
+                            Inaccurate Information : Identifying the right lead to opportunity
                         </div>
                         <div class="col-md-4 form-group">
-                            <h5 id="c_3">{{form.compliance_3}}</h5>
+                            <h5 id="b_3">{{form.compliance_3}}</h5>
                         </div>
                     </div>
-                    <div class="row mt-3">
+                    <div class="row mt-3 fatal">
                         <div class="col-md-8">
-                           CE : If any "Task due today" is popped up with YLC, that user need to be sent with appropriate "Task due today" canned message. If the TDT is repeated on task list with a different date and time or different task those users needs to be skipped.
+                           Advisor Sounding Rude / Proafinity Usage
                         </div>
                         <div class="col-md-4 form-group">
-                            <h5 id="c_4">{{form.compliance_4}}</h5>
-                        </div>
-                    </div>
-                    <div class="row mt-3">
-                        <div class="col-md-8">
-                           CE : User should be sent with the response which is loaded on Canned response list, make sure not to add any extra contents in it! If the user is skipped without a valid reason.
-                        </div>
-                        <div class="col-md-4 form-group">
-                            <h5 id="c_5">{{form.compliance_5}}</h5>
-                        </div>
-                    </div>
-                    <div class="row mt-3">
-                        <div class="col-md-8">
-                           CE : In Group posting if the content/image  is missed in post. If the content/Image is swapped.
-                        </div>
-                        <div class="col-md-4 form-group">
-                            <h5 id="c_6">{{form.compliance_6}}</h5>
+                            <h5 id="b_4">{{form.compliance_4}}</h5>
                         </div>
                     </div>
                     <div class="row mt-3">
                         <div class="col-md-8 score">
-                            Compliance Score
+                            Business &amp; Compliance Score
                         </div>
                         <div class="col-md-4">
-                            <h4 id="c_score">10</h4>
+                            <h4 id="b_score">5</h4>
                         </div>
                     </div>
                 </div>
-
                 <div class="col-md-12" id="last">
                     <div class="row">
                         <div class="col-md-6">
@@ -323,30 +365,26 @@
         </div>
     </div>
 </div>
+    
+
 {% endblock %}
-
-
 {% block scripts %}
 <script type="text/javascript">
-    var ce_1 = parseInt($('#ce_1').html());
-    var ce_2 = parseInt($('#ce_2').html());
-    var ce_3 = parseInt($('#ce_3').html());
-    var ce_4 = parseInt($('#ce_4').html());
-    $('#ce_score').html(ce_1+ce_2+ce_3+ce_4);
-    var c_1 = parseInt($('#c_1').html());
-    var c_2 = parseInt($('#c_2').html());
-    var c_3 = parseInt($('#c_3').html());
-    var c_4 = parseInt($('#c_4').html());
-    var c_5 = parseInt($('#c_5').html());
-    var c_6 = parseInt($('#c_6').html());
-    $('#c_score').html(c_1+c_2+c_3+c_4+c_5+c_6);
-        var total = parseInt($('#tot_score').html());
-        if (total <= 99) {
-            $('#result').html("Fail");
-            $('#result').css("color","red");
-        } else {
-            $('#result').html("Pass");
-            $('#result').css("color","green");
-        }
+
+        var oc_1 = parseInt($('#oc_1').html());
+        var oc_2 = parseInt($('#oc_2').html());
+        var oc_3 = parseInt($('#oc_3').html());
+        $('#oc_score').html(oc_1+oc_2+oc_3);
+        var softskill_1 = parseInt($('#softskill_1').html());
+        var softskill_2 = parseInt($('#softskill_2').html());
+        var softskill_3 = parseInt($('#softskill_3').html());
+        var softskill_4 = parseInt($('#softskill_4').html());
+        $('#softskill_score').html(softskill_1+softskill_2+softskill_3+softskill_4);
+        var b_1 = parseInt($('#b_1').html());
+        var b_2 = parseInt($('#b_2').html());
+        var b_3 = parseInt($('#b_3').html());
+        var b_4 = parseInt($('#b_4').html());
+        $('#b_score').html(b_1+b_2+b_3+b_4);
+
 </script>
 {% endblock %}
