--- a/Qms_v3/templates/agent/Email.html
+++ b/Qms_v3/templates/agent/Email.html
@@ -200,7 +200,7 @@
                     </div>
                     <div class="row mt-3">
                         <div class="col-md-8">
-                            Personalization ( building a Raport, Addressing by name)
+                            Personalization ( building a Report, Addressing by name)
                         </div>
                         <div class="col-md-4 form-group">
                             <h5 id="ce_4">{{form.ce_4}}</h5>
@@ -267,7 +267,7 @@
                             Customer Experience Score
                         </div>
                         <div class="col-md-4">
-                            <h5 id="ce_score">10</h5>
+                            <h4 id="ce_score">10</h4>
                         </div>
                     </div>
                 </div>
@@ -299,7 +299,7 @@
                             Business Score
                         </div>
                         <div class="col-md-4">
-                            <h5 id="b_score">10</h5>
+                            <h4 id="b_score">10</h4>
                         </div>
                     </div>
                 </div>
@@ -356,7 +356,7 @@
                             Business &amp; Compliance Score
                         </div>
                         <div class="col-md-4">
-                            <h5 id="c_score">10</h5>
+                            <h4 id="c_score">10</h4>
                         </div>
                     </div>
                 </div>
