--- a/Qms_v3/templates/form/Email.html
+++ b/Qms_v3/templates/form/Email.html
@@ -57,9 +57,9 @@
                             <div class="col-md-3 form-group">
                                 <label for="duration">Call Duration</label>
                                 <div style="width:100%; display: inline-flex;">
-                                    <input type="number" class="form-control" placeholder="hh" name="durationh" required="">
-                                    <input type="number" class="form-control" placeholder="mm" name="durationm" required="">
-                                    <input type="number" class="form-control" placeholder="ss" name="durations" required="">
+                                    <input type="number" min="0" class="form-control" placeholder="hh" name="durationh" required="">
+                                    <input type="number" min="0" max="60" class="form-control" placeholder="mm" name="durationm" required="">
+                                    <input type="number" min="0" max="60" class="form-control" placeholder="ss" name="durations" required="">
                                 </div>
                             </div>
                         </div>
@@ -142,7 +142,7 @@
                         </div>
                         <div class="row mt-3">
                             <div class="col-md-8">
-                                Personalization ( building a Raport, Addressing by name)
+                                Personalization ( building a Report, Addressing by name)
                             </div>
                             <div class="col-md-4 form-group">
                                 <input type="radio" name="ce_4" onchange="ce(this)" value="3" id="yes7" required="">
