--- a/Qms_v3/templates/form/Inbound.html
+++ b/Qms_v3/templates/form/Inbound.html
@@ -54,9 +54,9 @@
                             <div class="col-md-3 form-group">
                                 <label for="duration">Call Duration</label>
                                 <div style="width:100%; display: inline-flex;">
-                                    <input type="number" class="form-control" placeholder="hh" name="durationh" required="">
-                                    <input type="number" class="form-control" placeholder="mm" name="durationm" required="">
-                                    <input type="number" class="form-control" placeholder="ss" name="durations" required="">
+                                    <input type="number" min="0" class="form-control" placeholder="hh" name="durationh" required="">
+                                    <input type="number" min="0" max="60" class="form-control" placeholder="mm" name="durationm" required="">
+                                    <input type="number" min="0" max="60" class="form-control" placeholder="ss" name="durations" required="">
                                 </div>
                             </div>
                         </div>
@@ -315,7 +315,7 @@
                         </div>
                         <div class="row mt-3">
                             <div class="col-md-8">
-                               Procedure Followed
+                               Process & Procedure Followed
                             </div>
                             <div class="col-md-4 form-group">
                                 <input type="radio" name="compliance_4" onchange="compliance(this)" value="10" id="c4" required="">
