--- a/Qms_v3/templates/manager_dashboard.html
+++ b/Qms_v3/templates/manager_dashboard.html
@@ -1,147 +1,7 @@
-{% extends "qa_base.html" %}
-
-{% block style %}
-  <style>
-    .campaigns .inside {
-      padding: 10px;
-      background: #2A3F54;
-      color: #fff;
-      border-radius: 8px;
-      box-shadow: 3px 10px 10px #2A3F54;
-      font-size: 14px;
-    }
-    .campaigns .inside label{
-          font-weight: 400;
-    }
-    .campaigns .inside h2{
-          font-size: 20px;
-          font-weight: 600;
-          text-shadow: 1px 1px lightgrey;
-    }
-    .campaigns .inside h2 i {
-      margin-right: 5px;
-      font-size: 22px;
-      color: #007bff;
-      text-shadow: none !important;
-    }
-    .campaigns .inside_inbound h2 i{
-      color: #d2691e;
-    }
-    .campaigns .inside_email h2 i{
-      color: #096b1f;
-    }
-    .campaigns .inside_other h2 i{
-      color: #bd2130;
-    }
-    .campaigns {
-    }
-
-
-
-  </style>
-{% endblock %}
-
+{% extends "manager_base.html" %}
 {% block main %}
         <!-- page content -->
         <div class="right_col" role="main">
-          <div class="row mb-5">
-            <div class="col-md-12">
-              <div class="row">
-                <div class="col-md-3 campaigns">
-                  <form action="/form" method="post" enctype="multipart/form-data">
-                    {% csrf_token %}
-                    <div class="inside">
-                      <h2 align="center"><i class="fas fa-headphones"></i> Outbound</h2>
-                      <label for="campaign">Campaign</label>
-                      <select id="campaign" name="campaign" class="form-control select2" required>
-                        <option value="" selected disabled>Please Select</option>
-                        {% for i in out_campaigns %}
-                        <option value="{{i.name}}">{{i.name}}</option>
-                        {% endfor %}
-                      </select>
-                      <label for="emp" class="mt-3">Employee</label>
-                      <select id="emp" name="emp" class="form-control select2" required>
-                        <option value="" selected disabled>Please Select</option>
-                        {% for i in profile %}
-                        <option value="{{i.emp_id}}">{{i.emp_name}} ({{i.emp_id}})</option>
-                        {% endfor %}
-                      </select>
-                      <center><button class="btn btn-success btn-lg mt-4" style="padding: 0 30px !important;">Audit</button></center>
-                    </div>
-                  </form>
-                </div>
-                <div class="col-md-3 campaigns">
-                  <div class="inside inside_inbound">
-                  <form action="/form" method="post" enctype="multipart/form-data">
-                    {% csrf_token %}
-                      <h2 align="center"><i class="fas fa-headphones-alt"></i> Inbound</h2>
-                      <label for="campaign_inbound">Campaign</label>
-                      <select id="campaign_inbound" name="campaign" class="form-control select2" required>
-                        <option value="" selected disabled>Please Select</option>
-                        {% for i in in_campaign %}
-                        <option value="{{i.name}}">{{i.name}}</option>
-                        {% endfor %}
-                      </select>
-                      <label for="emp_inbound" class="mt-3">Employee</label>
-                      <select id="emp_inbound" name="emp" class="form-control select2" required>
-                        <option value="" selected disabled>Please Select</option>
-                        {% for i in profile %}
-                        <option value="{{i.emp_id}}">{{i.emp_name}} ({{i.emp_id}})</option>
-                        {% endfor %}
-                      </select>
-                      <center><button class="btn btn-success btn-lg mt-4 " style="padding: 0 30px !important;">Audit</button></center>
-                    </form>
-                  </div>
-                </div>
-                <div class="col-md-3 campaigns">
-                  <div class="inside inside_email">
-                    <form action="/form" method="post" enctype="multipart/form-data">
-                      {% csrf_token %}
-                      <h2 align="center"><i class="fas fa-envelope"></i> Email</h2>
-                      <label for="campaign_email">Campaign</label>
-                      <select id="campaign_email" name="campaign" class="form-control select2" required>
-                        <option value="" selected disabled>Please Select</option>
-                        {% for i in email_campaign %}
-                        <option value="{{i.name}}">{{i.name}}</option>
-                        {% endfor %}
-                      </select>
-                      <label for="emp_email" class="mt-3">Employee</label>
-                      <select id="emp_email" name="emp" class="form-control select2" required>
-                        <option value="" selected disabled>Please Select</option>
-                        {% for i in profile %}
-                        <option value="{{i.emp_id}}">{{i.emp_name}} ({{i.emp_id}})</option>
-                        {% endfor %}
-                      </select>
-                      <center><button class="btn btn-success btn-lg mt-4 " style="padding: 0 30px !important;">Audit</button></center>
-                    </form>
-                  </div>
-                </div>
-                <div class="col-md-3 campaigns">
-                  <div class="inside inside_other">
-                    <form action="/form" method="post" enctype="multipart/form-data">
-                      {% csrf_token %}
-                      <h2 align="center"><i class="fas fa-comments"></i> Other</h2>
-                      <label for="campaign_other">Campaign</label>
-                      <select id="campaign_other" name="campaign" class="form-control select2" required>
-                        <option value="" selected disabled>Please Select</option>
-                        {% for i in other_campaign %}
-                        <option value="{{i.name}}">{{i.name}}</option>
-                        {% endfor %}
-                      </select>
-                      <label for="emp_other" class="mt-3">Employee</label>
-                      <select id="emp_other" name="emp" class="form-control select2" required>
-                        <option value="" selected disabled>Please Select</option>
-                        {% for i in profile %}
-                        <option value="{{i.emp_id}}">{{i.emp_name}} ({{i.emp_id}})</option>
-                        {% endfor %}
-                      </select>
-                      <center><button class="btn btn-success btn-lg mt-4 " style="padding: 0 30px !important;">Audit</button></center>
-                    </form>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
           <div class="row mb-3">
             <div class="col-md-3">
               <div class="card-base">
@@ -152,7 +12,7 @@
                   <div class="card-data widgetCardData">
                     <h2 class="box-title mt-5" style="color: #2A3F54;">All Audits</h2>
                     <h1>{{all_total}}</h1>
-                    <a href="/qa-reports/all" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
+                    <a href="/manager-reports/all" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
                       View
                     </a>
                   </div>
@@ -169,7 +29,7 @@
                   <div class="card-data widgetCardData">
                     <h2 class="box-title mt-5" style="color: #2A3F54;">This Month's Audits</h2>
                     <h1>{{month_all_total}}</h1>
-                    <a href="/qa-reports/month" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
+                    <a href="/manager-reports/month" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
                       View
                     </a>
                   </div>
@@ -186,7 +46,7 @@
                   <div class="card-data widgetCardData">
                     <h2 class="box-title mt-5" style="color: #2A3F54;">Open Audits</h2>
                     <h1>{{open_total}}</h1>
-                    <a href="/qa-reports/open" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
+                    <a href="/manager-reports/open" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
                       View
                     </a>
                   </div>
@@ -203,7 +63,7 @@
                   <div class="card-data widgetCardData">
                     <h2 class="box-title mt-5" style="color: #2A3F54;">Dispute Audits</h2>
                     <h1>{{dispute_total}}</h1>
-                    <a href="/qa-reports/dispute" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
+                    <a href="/manager-reports/dispute" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
                       View
                     </a>
                   </div>
@@ -222,7 +82,7 @@
                   <div class="card-data widgetCardData">
                     <h2 class="box-title mt-5" style="color: #2A3F54;">This Month's Fatal Audits</h2>
                     <h1>{{fatal_total}}</h1>
-                    <a href="/qa-reports/fatal" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
+                    <a href="/manager-reports/fatal" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
                       View
                     </a>
                   </div>
@@ -292,7 +152,7 @@
                 </div>
                 <div class="card-body">
                   <div class="row">
-                    <form action="/qa-reports/campaign-range" method="POST" enctype="multipart/form-data">
+                    <form action="/manager-reports/campaign-range" method="POST" enctype="multipart/form-data">
                       {% csrf_token %}
                       <div class="col-md-12">
                         <div class="row">
@@ -353,7 +213,7 @@
 
                 <div class="card-body">
                   <div class="row">
-                    <form action="/qa-reports/emp-range" method="POST" enctype="multipart/form-data">
+                    <form action="/manager-reports/emp-range" method="POST" enctype="multipart/form-data">
                       {% csrf_token %}
                       <div class="col-md-12">
                         <div class="row">
@@ -456,14 +316,14 @@
             </div>
           </div>
           <div class="row pb-3">
-            <div class="col-md-12">
+            <div class="col-md-6">
               <div class="card">
                 <div class="card-header">
                   <h5>Employee Report</h5>
                 </div>
                 <div class="card-body">
                   <div class="row">
-                    <table  id="datatablex" class="table table-striped" style="width: 100%;">
+                    <table  id="datatable1" class="table table-striped" style="width: 100%;">
                       <thead>
                         <tr>
                           <th>Employee Name</th>
@@ -501,7 +361,146 @@
                 </div>
               </div>
             </div>
+            <div class="col-md-6">
+              <div class="card">
+                <div class="card-header">
+                  <h5>QA Report</h5>
+                </div>
+                <div class="card-body">
+                  <div class="row">
+                    <table  id="datatable2" class="table table-striped" style="width: 100%;">
+                      <thead>
+                        <tr>
+                          <th>Employee Name</th>
+                          <th>Employee Id</th>
+                          <th>Average Score</th>
+                          <th>Action</th>
+                        </tr>
+                      </thead>
+                      <tfoot>
+                        <tr>
+                          <th>Employee Name</th>
+                          <th>Employee Id</th>
+                          <th>Average Score</th>
+                          <th>Action</th>
+                        </tr>
+                      </tfoot>
+                      <tbody>
+                      {% for i in qa_audits %}
+                        <tr>
+                          <td>{{i.associate_name}}</td>
+                          <td>{{i.emp_id}}</td>
+                          <td>{{i.score|floatformat:2}}</td>
+                          <td>
+                              <form action="/individual-report" method="POST" enctype="multipart/form-data">
+                                {% csrf_token %}
+                                <input type="hidden" value="{{i.emp_id}}" name="emp_id">
+                                <button class="btn-sm btn btn-info">View</button>
+                              </form>
+                          </td>
+                        </tr>
+                      {% endfor %}
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
+          <div class="row pb-3">
+            <div class="col-md-6">
+              <div class="card">
+                <div class="card-header">
+                  <h5>Team Leader Report</h5>
+                </div>
+                <div class="card-body">
+                  <div class="row">
+                    <table  id="datatable3" class="table table-striped" style="width: 100%;">
+                      <thead>
+                        <tr>
+                          <th>Employee Name</th>
+                          <th>Employee Id</th>
+                          <th>Average Score</th>
+                          <th>Action</th>
+                        </tr>
+                      </thead>
+                      <tfoot>
+                        <tr>
+                          <th>Employee Name</th>
+                          <th>Employee Id</th>
+                          <th>Average Score</th>
+                          <th>Action</th>
+                        </tr>
+                      </tfoot>
+                      <tbody>
+                      {% for i in tl_audits %}
+                        <tr>
+                          <td>{{i.associate_name}}</td>
+                          <td>{{i.emp_id}}</td>
+                          <td>{{i.score|floatformat:2}}</td>
+                          <td>
+                              <form action="/individual-report" method="POST" enctype="multipart/form-data">
+                                {% csrf_token %}
+                                <input type="hidden" value="{{i.emp_id}}" name="emp_id">
+                                <button class="btn-sm btn btn-info">View</button>
+                              </form>
+                          </td>
+                        </tr>
+                      {% endfor %}
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="card">
+                <div class="card-header">
+                  <h5>Assistant Manager Report</h5>
+                </div>
+                <div class="card-body">
+                  <div class="row">
+                    <table  id="datatable4" class="table table-striped" style="width: 100%;">
+                      <thead>
+                        <tr>
+                          <th>Employee Name</th>
+                          <th>Employee Id</th>
+                          <th>Average Score</th>
+                          <th>Action</th>
+                        </tr>
+                      </thead>
+                      <tfoot>
+                        <tr>
+                          <th>Employee Name</th>
+                          <th>Employee Id</th>
+                          <th>Average Score</th>
+                          <th>Action</th>
+                        </tr>
+                      </tfoot>
+                      <tbody>
+                      {% for i in am_audits %}
+                        <tr>
+                          <td>{{i.associate_name}}</td>
+                          <td>{{i.emp_id}}</td>
+                          <td>{{i.score|floatformat:2}}</td>
+                          <td>
+                              <form action="/individual-report" method="POST" enctype="multipart/form-data">
+                                {% csrf_token %}
+                                <input type="hidden" value="{{i.emp_id}}" name="emp_id">
+                                <button class="btn-sm btn btn-info">View</button>
+                              </form>
+                          </td>
+                        </tr>
+                      {% endfor %}
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
 
         </div>
 
