--- a/Qms_v3/templates/report/Inbound.html
+++ b/Qms_v3/templates/report/Inbound.html
@@ -263,7 +263,7 @@
                                 Customer Experience Score
                             </div>
                             <div class="col-md-4">
-                                <h5 id="ce_score"></h5>
+                                <h4 id="ce_score"></h4>
                             </div>
                         </div>
                     </div>
@@ -295,7 +295,7 @@
                                 Business Score
                             </div>
                             <div class="col-md-4">
-                                <h5 id="b_score"></h5>
+                                <h4 id="b_score"></h4>
                             </div>
                         </div>
                     </div>
@@ -333,7 +333,7 @@
                         </div>
                         <div class="row mt-3">
                             <div class="col-md-8">
-                               Procedure Followed
+                               Process & Procedure Followed
                             </div>
                             <div class="col-md-4 form-group">
                                 <h5 id="c_4">{{form.compliance_4}}</h5>
@@ -352,7 +352,7 @@
                                 Business &amp; Compliance Score
                             </div>
                             <div class="col-md-4">
-                                <h5 id="c_score">10</h5>
+                                <h4 id="c_score">10</h4>
                             </div>
                         </div>
                     </div>
